@@ -1,0 +1,5 @@
+use warnings;
+use strict;
+
+system('t/multi/test_die.sh');
+
