@@ -1,4 +1,4 @@
 #!/bin/sh
 
-perl full_slave.pl &
-perl full_master.pl
+perl t/multi/full_slave.pl &
+perl t/multi/full_master.pl
